--- a/index.html
+++ b/index.html
@@ -1,183 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="main">
-        <nav>
-            <span><img width="54" src="logo.svg" alt=""></span>
-            <div>
-                <button class="btn">English</button>
-                <button class="btn btn-red-sm">Sign In</button>
-            </div>
-        </nav>
-        <div class="box">
+      <nav>
+        <span><img width="54" src="logo.svg" alt="" /></span>
+        <div>
+          <button class="btn">English</button>
+          <button class="btn btn-red-sm">Sign In</button>
         </div>
-        <div class="hero">
-            <span>Unlimited movies, TV shows and more</span>
-            <span>Watch anywhere. Cancel anytime.</span>
-            <span>Ready to watch? Enter your email to create or restart your membership.</span>
-            <div class="hero-buttons">
-                <input type="text" placeholder="Email address">
-                <button class="btn btn-red">Get Started &gt; </button>
-            </div>
+      </nav>
+      <div class="box"></div>
+      <div class="hero">
+        <span>Unlimited movies, TV shows and more</span>
+        <span>Watch anywhere. Cancel anytime.</span>
+        <span
+          >Ready to watch? Enter your email to create or restart your
+          membership.</span
+        >
+        <div class="hero-buttons">
+          <input type="text" placeholder="Email address" />
+          <button class="btn btn-red">Get Started &gt;</button>
         </div>
-        <div class="seperation"></div>
+      </div>
+      <div class="seperation"></div>
     </div>
     <section class="first">
-        <div>
-            <span>Enjoy on your TV</span>
-            <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
-        </div>
-        <div class="secimg">
-            <img src="assets/tv.png" alt="">
-            <video src="assets/video-tv-in-0819.m4v" autoplay loop muted></video>
-        </div>
+      <div>
+        <span>Enjoy on your TV</span>
+        <span
+          >Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray
+          players and more.</span
+        >
+      </div>
+      <div class="secimg">
+        <img src="assets/tv.png" alt="" />
+        <video src="assets/video-tv-in-0819.m4v" autoplay loop muted></video>
+      </div>
     </section>
     <div class="seperation"></div>
 
     <section class="first second">
-        <div class="secimg">
-            <img src="assets/mobile.jpg" alt="">
-        </div>
-        <div>
-            <span>Download your shows to watch offline</span>
-            <span>Save your favourites easily and always have something to watch.</span>
-        </div>
+      <div class="secimg">
+        <img src="assets/mobile.jpg" alt="" />
+      </div>
+      <div>
+        <span>Download your shows to watch offline</span>
+        <span
+          >Save your favourites easily and always have something to watch.</span
+        >
+      </div>
     </section>
     <div class="seperation"></div>
 
     <section class="first third">
-        <div>
-            <span>Watch everywhere</span>
-            <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
-        </div>
-        <div class="secimg">
-            <img src="assets/device-pile-in.png" alt="">
-            <video src="assets/video.m4v" autoplay loop muted></video>
-        </div>
+      <div>
+        <span>Watch everywhere</span>
+        <span
+          >Stream unlimited movies and TV shows on your phone, tablet, laptop,
+          and TV.</span
+        >
+      </div>
+      <div class="secimg">
+        <img src="assets/device-pile-in.png" alt="" />
+        <video src="assets/video.m4v" autoplay loop muted></video>
+      </div>
     </section>
     <div class="seperation"></div>
 
     <section class="first fourth">
-        <div class="secimg">
-            <img src="assets/last_image.png" alt="">
-        </div>
-        <div>
-            <span>Create profiles for kids</span>
-            <span>Send children on adventures with their favourite characters in a space made just for them—free with
-                your membership.</span>
-        </div>
+      <div class="secimg">
+        <img src="assets/last_image.png" alt="" />
+      </div>
+      <div>
+        <span>Create profiles for kids</span>
+        <span
+          >Send children on adventures with their favourite characters in a
+          space made just for them—free with your membership.</span
+        >
+      </div>
     </section>
     <div class="seperation"></div>
 
     <section class="faq">
-        <h2>Frequently Asked Questions</h2>
-        <div class="faq-box">
-            <span>What is Netflix?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="white"
-                fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
-        </div>
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-box">
+        <span>What is Netflix?</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+          color="white"
+          fill="none"
+        >
+          <path
+            d="M12 4V20M20 12H4"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
 
-        <div class="faq-box">
-            <span>How much does Netflix cost?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="white"
-                fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
-        </div>
+      <div class="faq-box">
+        <span>How much does Netflix cost?</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+          color="white"
+          fill="none"
+        >
+          <path
+            d="M12 4V20M20 12H4"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
 
-        <div class="faq-box">
-            <span>Where can I watch?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="white"
-                fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
-        </div>
+      <div class="faq-box">
+        <span>Where can I watch?</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+          color="white"
+          fill="none"
+        >
+          <path
+            d="M12 4V20M20 12H4"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
 
-        <div class="faq-box">
-            <span>How do I cancel?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="white"
-                fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
-        </div>
+      <div class="faq-box">
+        <span>How do I cancel?</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+          color="white"
+          fill="none"
+        >
+          <path
+            d="M12 4V20M20 12H4"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
 
-        <div class="faq-box">
-            <span>What can I watch on Netflix?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="white"
-                fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
-        </div>
+      <div class="faq-box">
+        <span>What can I watch on Netflix?</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+          color="white"
+          fill="none"
+        >
+          <path
+            d="M12 4V20M20 12H4"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
 
-        <div class="faq-box">
-            <span>Is Netflix good for kids?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="white"
-                fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
+      <div class="faq-box">
+        <span>Is Netflix good for kids?</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+          color="white"
+          fill="none"
+        >
+          <path
+            d="M12 4V20M20 12H4"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
+      <div class="zero">
+        <div>
+          Ready to watch? Enter your email to create or restart your membership.
         </div>
-        <div class="zero">
-            <div>Ready to watch? Enter your email to create or restart your membership.</div>
-            <input type="text" placeholder="Email address">
-            <button class="btn btn-red">Get Started &gt; </button>
-        </div>
+        <input type="text" placeholder="Email address" />
+        <button class="btn btn-red">Get Started &gt;</button>
+      </div>
     </section>
     <div class="seperation"></div>
 
     <footer>
-        <div class="question">
-            <span>Questions? Call</span>
-            <span><a href="000-800-919-1694">000-800-919-1694</a></span>
+      <div class="question">
+        <span>Questions? Call</span>
+        <span><a href="000-800-919-1694">000-800-919-1694</a></span>
+      </div>
+      <div class="footer">
+        <div class="footer-items">
+          <a href="https://help.netflix.com/en/node/412">FAQ</a>
+          <a href="https://ir.netflix.net/ir-overview/profile/default.aspx"
+            >Investor Relations</a
+          >
+          <a href="https://help.netflix.com/legal/privacy">Privacy</a>
+          <a href="https://fast.com/">Speed Test</a>
         </div>
-        <div class="footer">
-            <div class="footer-items">
-                <a href="https://help.netflix.com/en/node/412">FAQ</a>
-                <a href="https://ir.netflix.net/ir-overview/profile/default.aspx">Investor Relations</a>
-                <a href="https://help.netflix.com/legal/privacy">Privacy</a>
-                <a href="https://fast.com/">Speed Test</a>
-            </div>
 
-            <div class="footer-items">
-                <a href="https://help.netflix.com/en">Help Centre</a>
-                <a href="https://jobs.netflix.com/">Jobs</a>
-                <a href="Cookie Preferences">Cookie Preferences</a>
-                <a href="https://help.netflix.com/legal/notices">Legal Notices</a>
-            </div>
-
-            <div class="footer-items">
-                <a href="https://www.netflix.com/login?nextpage=https%3A%2F%2Fwww.netflix.com%2Fyouraccount">Account</a>
-                <a href="https://help.netflix.com/en/node/14361">Ways to Watch</a>
-                <a href="https://help.netflix.com/en/node/134094">Corporate Information</a>
-                <a href="https://www.netflix.com/in/browse/genre/839338">Only on Netflix</a>
-            </div>
-
-            <div class="footer-items">
-                <a href="https://media.netflix.com/en/">Media Centre</a>
-                <a href="https://help.netflix.com/legal/termsofuse">Terms of Use</a>
-                <a href="https://help.netflix.com/en/contactus">Contact Us</a>
-            </div>
+        <div class="footer-items">
+          <a href="https://help.netflix.com/en">Help Centre</a>
+          <a href="https://jobs.netflix.com/">Jobs</a>
+          <a href="Cookie Preferences">Cookie Preferences</a>
+          <a href="https://help.netflix.com/legal/notices">Legal Notices</a>
         </div>
-        <div class="last">
-            <button class="btn">English</button>
-            <div>Netflix India</div>
+
+        <div class="footer-items">
+          <a
+            href="https://www.netflix.com/login?nextpage=https%3A%2F%2Fwww.netflix.com%2Fyouraccount"
+            >Account</a
+          >
+          <a href="https://help.netflix.com/en/node/14361">Ways to Watch</a>
+          <a href="https://help.netflix.com/en/node/134094"
+            >Corporate Information</a
+          >
+          <a href="https://www.netflix.com/in/browse/genre/839338"
+            >Only on Netflix</a
+          >
         </div>
+
+        <div class="footer-items">
+          <a href="https://media.netflix.com/en/">Media Centre</a>
+          <a href="https://help.netflix.com/legal/termsofuse">Terms of Use</a>
+          <a href="https://help.netflix.com/en/contactus">Contact Us</a>
+        </div>
+      </div>
+      <div class="last">
+        <button class="btn">English</button>
+        <div>Netflix India</div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
